--- a/public/style.css
+++ b/public/style.css
@@ -1,22 +1,24 @@
 @font-face {
-  font-family: 'Noto Sans';
-  font-weight: 700;
-  src: url('/assets/fonts/NotoSans-Bold.ttf');
+    font-family: "Noto Sans";
+    font-weight: 700;
+    src: url("/assets/fonts/NotoSans-Bold.ttf");
 }
 
 * {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
-html, body {
-  border: 0;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
+html,
+body {
+    border: 0;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
 }
 
 body {
-  background: #3e66d2;
-  font-family: 'Noto Sans', sans-serif;
+    background: #ffffff;
+    font-family: "Noto Sans", sans-serif;
 }
+
