feat: add leaderbroad data

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -22,3 +22,10 @@ html, body, #root {
     font-style: normal;
   }
 
+  .ruda-regular {
+    font-family: "Ruda", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+  }
+
